# computing-for-ds-final-project-current

temp/home_credit_pipeline_backup/: .coverage  Makefile  api.py  balancer.py  final_readme.md  main.py  pyproject.toml
temp/home_credit_pipeline_backup/artifacts/: metrics.json  preprocessor.joblib  submission.csv
temp/home_credit_pipeline_backup/config/: default.yaml
temp/home_credit_pipeline_backup/src/home_credit/: __init__.py  config.py  data_loader.py  evaluator.py  feature_engineer.py  hyper_tuner.py  model_trainer.py  pipeline.py  preprocessor.py  threshold_analyzer.py
temp/home_credit_pipeline_backup/src/home_credit/tests/: conftest.py  test_data_loader.py  test_feature_engineer.py  test_preprocessor.py
temp/home_credit_pipeline_backup/src/home_credit/utils/: __init__.py  logger.py
temp/home_credit_pipeline_backup/src/home_credit_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
